remove AnalysisChain